--- a/fundamentos/bloco3/dia1/trybe-marketing.html
+++ b/fundamentos/bloco3/dia1/trybe-marketing.html
@@ -10,8 +10,13 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
       <script src="https://kit.fontawesome.com/ec29234e56.js" crossorigin="anonymous" defer></script> 
       <title>HTML</title>
+      <style>
+
+      </style>
    </head>
    <body>
       <h1>Hello World</h1>
+      <p>Teste</p>
+      <button type="button">Click me</button>
    </body>
 </html>
