Adicionando estilo quadrado a lista li

--- a/fundamentos/bloco3/dia2/index.html
+++ b/fundamentos/bloco3/dia2/index.html
@@ -39,6 +39,10 @@
         a{
             color: red;
         }
+
+        li{
+            list-style-type: square;
+        }
     </style>
     <title>Document</title>
 </head>
