--- a/fundamentos/bloco3/dia3/agrupamento.html
+++ b/fundamentos/bloco3/dia3/agrupamento.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Agrupando Seletores</title>
-        <link rel="stylesheet" href="pra_fixar2.css">
+        <link rel="stylesheet" href="agrupamento.css">
     </head>
     <body>
         <h1>Lista dos Melhores Sites que já vi</h1>
