--- a/fundamentos/bloco3/dia3/pseudoClasses.html
+++ b/fundamentos/bloco3/dia3/pseudoClasses.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Pseudoclasses</title>
-        <link rel="stylesheet" href="pra_fixar3.css">
+        <link rel="stylesheet" href="pseudoClasses.css">
     </head>
     <body>
         <h1>Paleta de Cores</h1>
